refactor: Update branding and location details
The application's branding has been updated from "NeuroDiag Centre" to "Avishkar Diagnostic". This commit includes changes to the company name, associated color palettes, and contact information across various components and data files to reflect this rebranding.

Additionally, location data has been updated to accurately represent branches in Dhanbad, Jharkhand, including specific addresses and phone numbers.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NeuroDiag Centre - Advanced Diagnostic Services</title>
-    <meta name="description" content="Premium diagnostic centre offering NABL accredited pathology, radiology, and wellness services with AI-powered assistance.">
+    <title>Avishkar Diagnostic - Bank More, Dhanbad</title>
+    <meta name="description" content="Premium diagnostic centre in Dhanbad offering NABL accredited pathology, radiology, and wellness services.">
     <!-- Google Fonts: Inter & Poppins for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +17,14 @@
         theme: {
           extend: {
             colors: {
-              primary: '#0B2C4D', // Deep Navy (Professional, Trustworthy)
-              secondary: '#00AEEF', // Bright Cyan (Action, Technology)
-              accent: '#E63946', // Soft Red (Alerts)
-              teal: '#2A9D8F', // Medical Teal (Healing, Calm)
-              'teal-light': '#E9F5F5',
-              'soft-blue': '#F4F9FC', // Very light blue background
+              primary: '#009045', // Avishkar Green (Healing, Nature, Trust)
+              secondary: '#E63028', // Avishkar Red (Vitality, Alert, Heart)
+              accent: '#F39C12', // Warm Orange for highlights
+              teal: '#006B3E', // Darker Green for depth
+              'teal-light': '#E8F5E9', // Light green background
+              'soft-blue': '#F9FAFB', // Neutral clean background
               surface: '#FFFFFF',
-              'text-dark': '#1D3557',
+              'text-dark': '#1F2937',
               'text-light': '#6B7280'
             },
             fontFamily: {
@@ -32,8 +32,8 @@
               heading: ['Poppins', 'sans-serif'],
             },
             boxShadow: {
-              'soft': '0 4px 20px -2px rgba(0, 0, 0, 0.05)',
-              'glow': '0 0 15px rgba(0, 174, 239, 0.2)',
+              'soft': '0 4px 20px -2px rgba(0, 144, 69, 0.08)',
+              'glow': '0 0 15px rgba(230, 48, 40, 0.2)',
             },
             animation: {
               'fade-in': 'fadeIn 0.5s ease-in',
@@ -63,11 +63,11 @@
         background: #f1f1f1; 
       }
       ::-webkit-scrollbar-thumb {
-        background: #cbd5e1; 
+        background: #81c784; 
         border-radius: 4px;
       }
       ::-webkit-scrollbar-thumb:hover {
-        background: #94a3b8; 
+        background: #4caf50; 
       }
 
       /* Global Styles */
@@ -94,7 +94,7 @@
 }
 </script>
 </head>
-  <body class="bg-soft-blue text-text-dark font-sans antialiased selection:bg-teal-light selection:text-teal">
+  <body class="bg-soft-blue text-text-dark font-sans antialiased selection:bg-teal-light selection:text-primary">
     <div id="root"></div>
   </body>
 </html>
