feat: Enhance SEO and service details routing
Introduce new routing for detailed service pages (CT, MRI, Full Body, Diabetes, Cardiac).
Update meta tags and descriptions in index.html for improved SEO and user information.
Add new testimonial to Home view.
Add basic validation and loading states to Appointment form.
Add new enum values for service detail views in types.ts.

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Avishkar Diagnostic - Bank More, Dhanbad</title>
-    <meta name="description" content="Premium diagnostic centre in Dhanbad offering NABL accredited pathology, radiology, and wellness services.">
+    <title>Avishkar Diagnostic - Best Pathology & Radiology Lab in Dhanbad</title>
+    <meta name="description" content="Avishkar Diagnostic Centre Bank More: Premier NABL accredited lab in Dhanbad offering MRI, CT Scan, Blood Tests, and Home Collection. Accurate reports & 24/7 service.">
+    <meta name="keywords" content="Diagnostic Centre Dhanbad, Pathology Lab Bank More, MRI Scan Dhanbad, CT Scan Cost, Blood Test Home Collection, NABL Lab Jharkhand, Avishkar Diagnostic">
+    <meta name="author" content="Avishkar Diagnostic Centre">
+    <meta property="og:title" content="Avishkar Diagnostic - Precision Diagnostics in Dhanbad">
+    <meta property="og:description" content="Trusted by 10 Lakh+ patients. Book home visits for blood tests, MRI, CT Scan and Full Body Checkups.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://avishkardiagnostic.com">
+    <meta name="theme-color" content="#009045">
+
     <!-- Google Fonts: Inter & Poppins for headings -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
